test/testdata/classes/methods/static/duplicate_error.lox
class Foo {
  static bar() {}
  bar() {}

  // error: static 'bar' has already been declared
  // lint error: static 'bar' has already been declared
  static bar() {}
}

_ = Foo;
